# Jivaro

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  imgui.ini  make.bat  q  tatus
src/: CMakeLists.txt  application.cpp  application.h  camera.h  common.h  context.cpp  context.h  default.h  device copie.cpp  device copie.h  device.cpp  device.h  glsl.h  glutils.h  hello_world.cpp  input.cpp  input.h  main.cpp  main.h  mesh.cpp  mesh.h  node.h  output.h  prim.h  ray.h  resources.rc  scene.h  splitter.cpp  splitter.h  timer.h  tools.h  ui.cpp  ui.h  utils.cpp  utils.h  view.cpp  view.h  window.cpp  window.h
src/acceleration/: bvh.cpp  bvh.h  distance.cpp  distance.h  gradient.cpp  gradient.h  grid.cpp  grid.h  grid2d.cpp  grid2d.h  grid3d.cpp  grid3d.h  hashGrid.cpp  hashGrid.h  intersector.cpp  intersector.h  kdtree.cpp  kdtree.h  mortom.cpp  mortom.h  morton.cpp  morton.h  octree.cpp  octree.h  pool.cpp  pool.h
src/anim/: schema.usda  test.cpp
src/app/: Nouveau document texte.txt  application.cpp  application.h  callbacks.cpp  callbacks.h  camera.cpp  camera.h  commands.cpp  commands.h  delegate.cpp  delegate.h  engine.cpp  engine.h  handle.cpp  handle.h  index.cpp  index.h  intersector.h  layout.cpp  layout.h  modal.cpp  modal.h  model.cpp  model.h  notice.cpp  notice.h  picking.cpp  picking.h  popup.cpp  popup.h  property.h  proxy.h  registry.cpp  registry.h  scene.cpp  scene.h  selection.cpp  selection.h  shape.cpp  shape.h  (+16 more)
src/command/: block.cpp  block.h  command.cpp  command.h  delegate.cpp  delegate.h  inverse.cpp  inverse.h  manager.cpp  manager.h  router.cpp  router.h
src/embree/: buffer.cpp  buffer.h  camera.h  context.cpp  context.h  cube.cpp  cube.h  device.cpp  device.h  instance.cpp  instance.h  mesh.cpp  mesh.h  prim.h  ray.h  sphere.cpp  sphere.h  subdiv.cpp  subdiv.h  utils.cpp  utils.h
src/exec/: execution.cpp  execution.h  menu.cpp  menu.h  network.h  node.h  sceneIndex.cpp  sceneIndex.h
src/geometry/: attribute.h  component.h  curve.cpp  curve.h  decomposition.cpp  decomposition.h  deformable.cpp  deformable.h  delaunay.cpp  delaunay.h  edge.cpp  edge.h  geodesic.cpp  geodesic.h  geometry.cpp  geometry.h  halfEdge.cpp  halfEdge.h  implicit.cpp  implicit.h  instancer.cpp  instancer.h  intersection.cpp  intersection.h  intersector.cpp  intersector.h  kabsch.cpp  kabsch.h  location.cpp  location.h  matrix.cpp  matrix.h  mesh.cpp  mesh.h  perlin.cpp  perlin.h  point - Copie.cpp  point.cpp  point.h  points.cpp  (+40 more)
src/graph/: api.h  composerBindingAPI.cpp  composerBindingAPI.h  composer_schema.usda  connectableAPI.cpp  connectableAPI.h  coordSysAPI.cpp  coordSysAPI.h  deformable.cpp  deformable.h  deformableAPI.cpp  deformableAPI.h  execution.cpp  execution.h  generatedSchema.usda  graph.cpp  graph.h  hierarchy.cpp  hierarchy.h  input.cpp  input.h  layer.cpp  layer.h  node.cpp  node.h  nodeComposer.cpp  nodeComposer.h  nodeGraph.cpp  nodeGraph.h  nodeStage.cpp  nodeStage.h  output.cpp  output.h  plugInfo.json  schema.usda  shade.cpp  stage.cpp  stage.h  tokens.cpp  tokens.h  (+16 more)
src/graph_schema_test/: composer.cpp  composer.h  composerBindingAPI.cpp  coordSysAPI.cpp  generatedSchema.usda  graph.cpp  node.cpp  node.h  nodeStage.cpp  nodeStage.h  output.cpp  schema.usda  tokens.cpp  tokens.h  utils.cpp  utils.h  wrapComposer.cpp  wrapLoadRule.cpp  wrapNodeStage.cpp  wrapPopulationMask.cpp  wrapTokens.cpp
src/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_custom.h  imgui_demo.cpp  imgui_draw.cpp  imgui_filebrowser.cpp  imgui_filebrowser.h  imgui_graph.cpp  imgui_graph.h  imgui_graph_test.cpp  imgui_impl_opengl3.cpp  imgui_internal.h  imgui_nodes.cpp  imgui_nodes.h  imgui_tables.cpp  imgui_test.cpp  imgui_test.h  imgui_widgets.cpp
src/imgui_old/: imconfig.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h
src/imguiold/: imgui_impl_glfw.cpp  imgui_test.cpp  imgui_test.h
src/nodes/: stage.cpp  stage.h
src/pbd/: accum.cpp  accum.h  api.h  body.cpp  body.h  collision.cpp  collision.h  constraint.cpp  constraint.h  contact.cpp  contact.h  eigenSolver.h  element.h  force.cpp  force.h  integration.cpp  integration.h  line.cpp  line.h  mask.cpp  mask.h  maths.cpp  maths.h  matrix.cpp  matrix.h  menu.cpp  menu.h  particle.cpp  particle.h  pick.h  rigidbody.h  solver.cpp  solver.h  tet.h  tokens.cpp  tokens.h  triangle.cpp  triangle.h  utils.h  volume.cpp  (+1 more)
src/test_schema/: composer.cpp  composer.h  composerBindingAPI.cpp  composerBindingAPI.h  connectableAPI.cpp  connectableAPI.h  coordSysAPI.cpp  coordSysAPI.h  generatedSchema.usda  graph.cpp  graph.h  input.cpp  input.h  node.cpp  node.h  output.cpp  output.h  plugInfo.json  schema.usda  tokens.cpp  tokens.h  utils.cpp  utils.h  wrapComposer.cpp  wrapComposerBindingAPI.cpp  wrapConnectableAPI.cpp  wrapCoordSysAPI.cpp  wrapGraph.cpp  wrapNode.cpp  wrapTokens.cpp
src/tests/: bvh.cpp  bvh.h  geodesic.cpp  geodesic.h  gradient.cpp  gradient.h  grid.cpp  grid.h  hair copy.cpp  hair.cpp  hair.h  instancer.cpp  instancer.h  loader.h  location.cpp  location.h  particles.cpp  particles.h  pbd.cpp  pbd.h  pendulum.cpp  pendulum.h  points.cpp  points.h  push.cpp  push.h  raycast.cpp  raycast.h  rivet.cpp  rivet.h  scene.cpp  stageGraph.cpp  stageGraph.h  stageInstance.cpp  stageInstances.h  stageUI.cpp  stageUI.h  utils.cpp  utils.h  velocity.cpp  (+1 more)
src/ui/: api.h  attributeEditor.cpp  attributeEditor.h  attributes.cpp  base.h  browser.cpp  browser.h  commands.cpp  commands.h  contentBrowser.cpp  contentBrowser.h  curveEditor.cpp  curveEditor.h  debug.cpp  debug.h  demo.cpp  demo.h  dummy.cpp  dummy.h  explorer.cpp  explorer.h  fileBrowser.cpp  fileBrowser.h  filebrowser.cpp  filebrowser.h  font.h  fonts.cpp  fonts.h  graph.cpp  graph.h  graphEditor.cpp  graphEditor.h  head.cpp  head.h  icon.cpp  icon.h  layer.cpp  layer.h  layerEditor.cpp  layerEditor.h  (+43 more)
src/utils/: bits.h  color.h  files.cpp  files.h  glsl.h  glutils.cpp  glutils.h  icons.cpp  icons.h  keys.h  native.c  native.h  options.cpp  options.h  prefs.cpp  prefs.h  scancode.h  screenSpaceQuad.cpp  (+12 more)
tests/: CMakeLists.txt  default.h  main.cpp  view.h  window.h
(+174 files in other folders)
